Fix tabs styles

--- a/src/components/Notes/styles.css
+++ b/src/components/Notes/styles.css
@@ -1,7 +1,3 @@
-.notes__level {
-  display: flex;
-  flex-direction: column;
-  max-height: 400px;
-  overflow: scroll;
-  padding-top: 25px;
+.tabs ul {
+  border: none;
 }
